--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "axios": "^1.6.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.21.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
+    "z": "^1.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
